--- a/View/template/css/style.css
+++ b/View/template/css/style.css
@@ -22,7 +22,6 @@ header {
 }
 
 h1, h2, h3 {
-    font-family: "Ailerons", 'Arial', sans-serif;
     font-weight: 100;
 }
 
@@ -30,11 +29,18 @@ h2 {
     text-align: center;
     font-size: 250%;
 }
+
+.mensaje {
+    text-align: center;
+    font-size: 200%;
+    margin: 0;
+}
+
 .thu-real {
     font-weight: 100;
     text-align: center;
     margin: 0;
-    font-size: 500%;
+    font-size: 400%;
     border-bottom: 2px solid #e67e22;
     clear: right;
 }
@@ -45,7 +51,6 @@ h2 {
 
 
 .ali {
-    font-family: "Ailerons", 'Arial', sans-serif;
     font-size: 150%;
 }
 
@@ -65,10 +70,9 @@ h2 {
 .logout:link, .logout:visited {
     text-align: center;
     float: right;
-    position: relative;
-    top: -90px;
-    right: 120px;
-    width: 5%;
+    margin-right: 120px;
+    margin-top: 30px;
+    width: 50px;
     border-radius: 16px;
     padding: 20px;
     border: none;
@@ -85,7 +89,7 @@ h2 {
 }
 
 .login-form {
-    width: 30%;
+    width: 330px;
     margin: 60px auto;
     padding: 16px;
     border: 1px solid transparent;
@@ -95,9 +99,10 @@ h2 {
 }
 
 .articulos-form{
-    width: 40%;
+    width: 450px;
     margin: 60px auto;
     margin-top: 20px;
+    margin-bottom: 0px;
     padding: 16px;
     border: 1px solid transparent;
     border-radius: 16px;
@@ -112,6 +117,7 @@ h2 {
 input, select {
     margin-bottom: 15px;
     padding-left: 12px;
+    padding-right: 12px;
     border-radius: 16px;
     border: none;
 }
@@ -122,7 +128,7 @@ input[type=submit]:hover, input[type=submit]:active {
 
 .msg {
     margin: auto;
-    margin-top: 50px;
+    margin-top: 25px;
     border: 1px solid transparent;
     border-radius: 16px;
     background: #555;
@@ -137,7 +143,7 @@ input[type=submit]:hover, input[type=submit]:active {
 
 .msg-error {
     background-color: #b23528;
-    width: 50%;
+    width: 550px;
 }
 
 .msg-alerta {
@@ -153,9 +159,9 @@ nav {
     padding-top: 4px;
     padding-bottom: 4px;
     border-radius: 16px;
-    width: 75%;
+    width: 850px;
     margin: 20px auto;
-    margin-bottom: 80px;
+    margin-bottom: 40px;
     
 }
 
@@ -185,8 +191,8 @@ li a:hover, li a:active {
 .boton-a{
     text-align: center;
     float: right;
-    margin-right: 150px;
-    width: 1%;
+    margin-right: 120px;
+    width: 20px;
     border-radius: 16px;
     padding: 20px;
     border: none;
@@ -200,7 +206,7 @@ li a:hover, li a:active {
 
 .boton-b{
     float: left;
-    margin-left: 500px;
+    margin-left: 30%;
     width: 40px;
     height: auto;
     border-radius: 16px;
